--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,6 @@ html {
   filter: blur(750px);
 }
 
-.overlay_video {
-  background-color: rgba(0, 51, 255, 0.1);
+.overlay {
+  background-color: rgba(0, 0, 0, 0.25);
 }
