--- a/src/index.css
+++ b/src/index.css
@@ -49,13 +49,19 @@ html {
   box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
 }
 
-.sidebar {
+.slide-top {
   -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-.transition_opacity {
-  animation: fadeInAnimation ease 0.75s;
+.fade-in {
+  animation: fade-in ease 0.75s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+.fade-out {
+  animation: fade-out ease 0.75s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
@@ -82,12 +88,21 @@ html {
   }
 }
 
-@keyframes fadeInAnimation {
+@keyframes fade-in {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
