--- a/src/index.css
+++ b/src/index.css
@@ -141,3 +141,19 @@ html {
 .overlay {
   background-color: rgba(0, 0, 0, 0.25);
 }
+
+.mapouter {
+  position: relative;
+  text-align: right;
+  width: 100%;
+  height: 400px;
+}
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  width: 100%;
+  height: 400px;
+}
+.gmap_iframe {
+  height: 400px !important;
+}
