--- a/src/index.css
+++ b/src/index.css
@@ -157,3 +157,14 @@ html {
 .gmap_iframe {
   height: 400px !important;
 }
+
+.slide {
+  opacity: 0;
+  transition-duration: 1s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  transition-duration: 1s;
+  transform: scale(1.03);
+}
